@@ -1,3 +1,9 @@
+2006-09-29  Sam Steingold  <sds@podval.org>
+
+	* sequence.d (end_minus_start): new function
+	(seq_filterop, remove_op, delete_op, seq_duplicates)
+	(substitute_op): use it
+
 2006-09-28  Sam Steingold  <sds@podval.org>
 
 	fixed bug #[ 1567186 ]: set-difference ... :test 'equalp
